--- a/templates/php-fpm.conf.j2
+++ b/templates/php-fpm.conf.j2
@@ -13,8 +13,8 @@
 ; Relative path can also be used. They will be prefixed by:
 ;  - the global prefix if it's been set (-p arguement)
 ;  - /usr otherwise
-{% if include %}
-    include= {{ include }}
+{% if fpm_conf.include %}
+    include= {{ fpm_conf.include }}
 {% endif %}
 
 ;;;;;;;;;;;;;;;;;;
@@ -25,8 +25,8 @@
 ; Pid file
 ; Note: the default prefix is /var
 ; Default Value: none
-{% if pid is defined %}
-    pid = {{ pid }}    
+{% if fpm_conf.pid is defined %}
+    pid = {{ fpm_conf.pid }}    
 {% endif %}
 
 
@@ -34,16 +34,16 @@
 ; Note: the default prefix is /var
 ; Default Value: log/php-fpm.log
 
-error_log = {{ error_log }}
+error_log = {{ fpm_conf.error_log }}
 
 ; Log level
 ; Possible Values: alert, error, warning, notice, debug
 ; Default Value: notice
-log_level = {{ notice }}
+log_level = {{ fpm_conf.notice }}
 
 ; used to specify what type of program is logging the message.
 ; Default value: daemon.
-syslog.facility = {{ daemon }}
+syslog.facility = {{ fpm_conf.daemon }}
 
 ; Prepended to every message.
 ; If you have multiple FPM instances running on the same server
@@ -55,7 +55,7 @@ syslog.ident = php-fpm
 ; interval set by emergency_restart_interval then FPM will restart. A value
 ; of '0' means 'Off'.
 ; Default Value: 0
-emergency_restart_threshold = {{ emergency_restart_threshold }}
+emergency_restart_threshold = {{ fpm_conf.emergency_restart_threshold }}
 
 ; Interval of time used by emergency_restart_interval to determine when 
 ; a graceful restart will be initiated.  This can be useful to work around
@@ -63,54 +63,54 @@ emergency_restart_threshold = {{ emergency_restart_threshold }}
 ; Available Units: s(econds), m(inutes), h(ours), or d(ays)
 ; Default Unit: seconds
 ; Default Value: 0
-emergency_restart_interval = {{ emergency_restart_interval }}
+emergency_restart_interval = {{ fpm_conf.emergency_restart_interval }}
 
 ; Time limit for child processes to wait for a reaction on signals from master.
 ; Available units: s(econds), m(inutes), h(ours), or d(ays)
 ; Default Unit: seconds
 ; Default Value: 0
-process_control_timeout = {{ process_control_timeout }}
+process_control_timeout = {{ fpm_conf.process_control_timeout }}
 
 ; The maximum number of processes FPM will fork. 
 ; This has been design to control the global number of processes
 ; when using dynamic PM within a lot of pools. 
 ; Use it with caution. 
 ; Default value: 0.
-process.max = {{ process.max }}
+process.max = {{ fpm_conf.process.max }}
 
 ; Specify the nice(2) priority to apply to the master process (only if set).
 ; The value can vary from -19 (highest priority) to 20 (lower priority).
 ; Default value: not set.
-{% if process.priority  is defined %}
-    process.priority = {{ process.priority }}    
+{% if fpm_conf.process.priority  is defined %}
+    process.priority = {{ fpm_conf.process.priority }}    
 {% endif %}
 
 ; Send FPM to background. Set to 'no' to keep FPM in foreground for debugging.
 ; Default Value: yes
-daemonize = {{ daemonize }}
+daemonize = {{ fpm_conf.daemonize }}
 
 ;Set open file descriptor rlimit for the master process.
 ; Default value: not specifyed in doc
-{% if rlimit_files is defined %}
-    rlimit_files = {{ rlimit_files }}    
+{% if fpm_conf.rlimit_files is defined %}
+    rlimit_files = {{ fpm_conf.rlimit_files }}    
 {% endif %}
 
 ; Set max core size rlimit for the master process.
 ; Default value: 0.
-rlimit_core = {{ rlimit_core}}
+rlimit_core = {{ fpm_conf.rlimit_core}}
 
 ; Specify the event mechanism FPM will use.
 ; The following is available: select, pool, epoll, kqueue (*BSD), port (Solaris).
 ; Default value: not set (auto detection).
-{% if events.mechanism is defined %}
-    events.mechanism = {{ events.mechanism }}
+{% if fpm_conf.events.mechanism is defined %}
+    events.mechanism = {{ fpm_conf.events.mechanism }}
 {% endif %}
 
 ; When FPM is build with systemd integration, 
 ; specify the interval, in second, between health report notification to systemd.
 ; Set to 0 to disable
 ; Default value: 10.
-systemd_interval = {{ systemd_interval }}
+systemd_interval = {{ fpm_conf.systemd_interval }}
 
 ;;;;;;;;;;;;;;;;;;;;
 ; Pool Definitions ; 
@@ -123,4 +123,4 @@ systemd_interval = {{ systemd_interval }}
 
 ; To configure the pools it is recommended to have one .conf file per
 ; pool in the following directory:
-include={{ include_pools }}
+include={{ fpm_conf.include_pools }}
