--- a/templates/pool.conf.j2
+++ b/templates/pool.conf.j2
@@ -11,7 +11,12 @@ listen = {{ listen | mandatory }}
 ; Set listen(2) backlog.
 ; A value of '-1' means unlimited.
 ; Default value: -1.
-listen.backlog = {{ pool.listen.backlog | default(listen.backlog) }}
+{% if pool.listen.backlog is defined %}
+    listen.backlog = {{- pool.listen.backlog -}}   
+{% else %}
+    listen.backlog = {{- fpm_conf.listen.backlog -}}
+{% endif %}
+
 
 ; List of IPv4 addresses of FastCGI clients which are allowed to connect.
 ; Equivalent to the FCGI_WEB_SERVER_ADDRS environment variable
@@ -20,7 +25,12 @@ listen.backlog = {{ pool.listen.backlog | default(listen.backlog) }}
 ; Each address must be separated by a comma.
 ; If this value is left blank, connections will be accepted from any ip address.
 ; Default value: any. IPv6 addresses are allowed since PHP 5.5.20 and 5.6.4.
-listen.allowed_clients = {{ pool.listen.allowed_clients | default(allowed_clients) }}
+{% if pool.listen.allowed_clients is defined %}
+    listen.allowed_clients = {{- pool.listen.allowed_clients -}}    
+{% else %}
+    listen.allowed_clients = {{- fpm_conf.allowed_clients }}
+{% endif %}
+
 
 ; Set permissions for unix socket, if one is used.
 ; In Linux, read/write permissions must be set in order to allow
@@ -76,7 +86,12 @@ pm.max_children = {{ pool.pm.max_children | mandatory }}
 ; The number of child processes created on startup.
 ; Used only when pm is set to dynamic.
 ; Default Value: min_spare_servers + (max_spare_servers - min_spare_servers) / 2.
-pm.start_servers = {{ pool.pm.start_servers | default(pm.start_servers) }}
+{% if pool.pm.start_servers is defined %}
+    pm.start_servers = {{- pool.pm.start_servers -}}
+{% else %}    
+    pm.start_servers = {{- fpm_conf.pm.start_servers  -}}
+{% endif %}
+
 
 ; The desired minimum number of idle server processes.
 ; Used only when pm is set to dynamic.
@@ -96,7 +111,12 @@ pm.start_servers = {{ pool.pm.start_servers | default(pm.start_servers) }}
 ; Used only when pm is set to ondemand.
 ; Available units: s(econds)(default), m(inutes), h(ours), or d(ays).
 ; Default value: 10s.
-pm.process_idle_timeout = {{ pool.pm.process_idle_timeout | default(pm.process_idle_timeout)}}
+{% if pool.pm.process_idle_timeout is defined %}
+    pm.process_idle_timeout = {{- pool.pm.process_idle_timeout -}}    
+{% else %}
+    pm.process_idle_timeout = {{- fpm_conf.pm.process_idle_timeout -}}
+{% endif %}
+
 
 ; The number of requests each child process should execute before respawning.
 ; This can be useful to work around memory leaks in 3rd party libraries.
@@ -123,7 +143,11 @@ pm.max_requests = {{ pool.pm.max_requests | default(pm.max_requests)}}
 ; This directive may be used to customize the response to a ping request.
 ; The response is formatted as text/plain with a 200 response code.
 ; Default value: pong
-ping.response = {{ pool.ping.response | default(ping.response)}}
+{% if pool.ping.response is defined %}
+    ping.response = {{ pool.ping.response }}
+{% else %}
+    ping.response = {{ fpm_conf.ping.response }}
+{% endif %}
 
 ; Specify the nice(2) priority to apply to the worker process (only if set).
 ; The value can vary from -19 (highest priority) to 20 (lower priority).
@@ -142,17 +166,30 @@ ping.response = {{ pool.ping.response | default(ping.response)}}
 ; A value of '0' means 'Off'.
 ; Available units: s(econds)(default), m(inutes), h(ours), or d(ays).
 ; Default value: 0.
-request_terminate_timeout = {{ pool.request_terminate_timeout | default(request_terminate_timeout)}}
+{% if pool.request_terminate_timeout is defined %}
+    request_terminate_timeout = {{ pool.request_terminate_timeout }}
+{% else %}
+    request_terminate_timeout = {{ fpm_conf.request_terminate_timeout}}
+{% endif %}
+
 
 ; The timeout for serving a single request after which a PHP backtrace will be dumped to the 'slowlog' file. 
 ; A value of '0' means 'Off'. 
 ; Available units: s(econds)(default), m(inutes), h(ours), or d(ays).
 ; Default value: 0.
-request_slowlog_timeout = {{ pool.request_slowlog_timeout | default(request_slowlog_timeout)}}
+{% if pool.request_slowlog_timeout is defined %}
+    request_slowlog_timeout = {{ pool.request_slowlog_timeout }}
+{% else %}
+    request_slowlog_timeout = {{ fpm_conf.request_slowlog_timeout}}
+{% endif %}
 
 ; The log file for slow requests. 
 ; Default value: #INSTALL_PREFIX#/log/php-fpm.log.slow.
-slowlog = {{ pool.slowlog | default(slowlog)}}
+{% if pool.slowlog %}
+    slowlog = pool.slowlog
+{% else %}
+    slowlog = fpm_conf.slowlog
+{% endif %}
 
 ; Set open file descriptor rlimit for child processes in this pool.
 ; Default value: system defined value.
@@ -185,20 +222,33 @@ slowlog = {{ pool.slowlog | default(slowlog)}}
 ; Redirect worker stdout and stderr into main error log.
 ; If not set, stdout and stderr will be redirected to /dev/null according to FastCGI specs.
 ; Default value: no.
-catch_workers_output = {{ pool.catch_workers_output | default(catch_workers_output)}}
+{% if pool.catch_workers_output is defined %}
+    catch_workers_output = {{ pool.catch_workers_output }}
+{% else %}
+    catch_workers_output = {{ fpm_conf.catch_workers_output }}
+{% endif %}
+
 
 ; Clear environment in FPM workers.
 ; Prevents arbitrary environment variables from reaching FPM worker processes
 ; by clearing the environment in workers before env vars specified in this pool configuration are added.
 ; Since PHP 5.4.27, 5.5.11, and 5.6.0. Default value: Yes.
-clear_env = {{ pool.clear_env | default(clear_env)}}
+{% if pool.clear_env is defined %}
+    clear_env = pool.clear_env
+{% else %}
+    clear_env = fpm_conf.clear_env
+{% endif %}
 
 ; Limits the extensions of the main script FPM will allow to parse.
 ; This can prevent configuration mistakes on the web server side.
 ; You should only limit FPM to .php extensions to prevent malicious
 ; users to use other extensions to execute php code.
 ; Default value: .php .phar
-security.limit_extensions = {{ pool.security.limit_extensions | default(security.limit_extensions) }}
+{% if pool.security.limit_extensions is defined %}
+    security.limit_extensions = pool.security.limit_extensions
+{% else %}
+    security.limit_extensions = fpm_conf.security.limit_extensions
+{% endif %}
 
 ; The access log file. Default value: not set
 {% if pool.access.log is defined %}
@@ -206,4 +256,8 @@ security.limit_extensions = {{ pool.security.limit_extensions | default(security
 {% endif %}
 
 ; The access log format. Default value: "%R - %u %t \"%m %r\" %s"
-access.format = {{ pool.access.format | default(access.format)}}
+{% if pool.access.format is defined %}
+    access.format = {{ pool.access.format }}
+{% else %}
+    access.format = {{ fpm_conf.access.format }}
+{% endif %}
