--- a/templates/pool.conf.j2
+++ b/templates/pool.conf.j2
@@ -14,7 +14,7 @@ listen = {{ listen | mandatory }}
 {% if pool.listen.backlog is defined %}
     listen.backlog = {{- pool.listen.backlog -}}   
 {% else %}
-    listen.backlog = {{- fpm_conf.listen.backlog -}}
+    listen.backlog = {{- listen.backlog -}}
 {% endif %}
 
 
@@ -28,7 +28,7 @@ listen = {{ listen | mandatory }}
 {% if pool.listen.allowed_clients is defined %}
     listen.allowed_clients = {{- pool.listen.allowed_clients -}}    
 {% else %}
-    listen.allowed_clients = {{- fpm_conf.allowed_clients }}
+    listen.allowed_clients = {{- allowed_clients }}
 {% endif %}
 
 
@@ -89,7 +89,7 @@ pm.max_children = {{ pool.pm.max_children | mandatory }}
 {% if pool.pm.start_servers is defined %}
     pm.start_servers = {{- pool.pm.start_servers -}}
 {% else %}    
-    pm.start_servers = {{- fpm_conf.pm.start_servers  -}}
+    pm.start_servers = {{- pm.start_servers  -}}
 {% endif %}
 
 
@@ -114,7 +114,7 @@ pm.max_children = {{ pool.pm.max_children | mandatory }}
 {% if pool.pm.process_idle_timeout is defined %}
     pm.process_idle_timeout = {{- pool.pm.process_idle_timeout -}}    
 {% else %}
-    pm.process_idle_timeout = {{- fpm_conf.pm.process_idle_timeout -}}
+    pm.process_idle_timeout = {{- pm.process_idle_timeout -}}
 {% endif %}
 
 
@@ -146,7 +146,7 @@ pm.max_requests = {{ pool.pm.max_requests | default(pm.max_requests)}}
 {% if pool.ping.response is defined %}
     ping.response = {{ pool.ping.response }}
 {% else %}
-    ping.response = {{ fpm_conf.ping.response }}
+    ping.response = {{ ping.response }}
 {% endif %}
 
 ; Specify the nice(2) priority to apply to the worker process (only if set).
@@ -169,7 +169,7 @@ pm.max_requests = {{ pool.pm.max_requests | default(pm.max_requests)}}
 {% if pool.request_terminate_timeout is defined %}
     request_terminate_timeout = {{ pool.request_terminate_timeout }}
 {% else %}
-    request_terminate_timeout = {{ fpm_conf.request_terminate_timeout}}
+    request_terminate_timeout = {{ request_terminate_timeout}}
 {% endif %}
 
 
@@ -180,7 +180,7 @@ pm.max_requests = {{ pool.pm.max_requests | default(pm.max_requests)}}
 {% if pool.request_slowlog_timeout is defined %}
     request_slowlog_timeout = {{ pool.request_slowlog_timeout }}
 {% else %}
-    request_slowlog_timeout = {{ fpm_conf.request_slowlog_timeout}}
+    request_slowlog_timeout = {{ request_slowlog_timeout}}
 {% endif %}
 
 ; The log file for slow requests. 
@@ -188,7 +188,7 @@ pm.max_requests = {{ pool.pm.max_requests | default(pm.max_requests)}}
 {% if pool.slowlog %}
     slowlog = pool.slowlog
 {% else %}
-    slowlog = fpm_conf.slowlog
+    slowlog = slowlog
 {% endif %}
 
 ; Set open file descriptor rlimit for child processes in this pool.
@@ -225,7 +225,7 @@ pm.max_requests = {{ pool.pm.max_requests | default(pm.max_requests)}}
 {% if pool.catch_workers_output is defined %}
     catch_workers_output = {{ pool.catch_workers_output }}
 {% else %}
-    catch_workers_output = {{ fpm_conf.catch_workers_output }}
+    catch_workers_output = {{ catch_workers_output }}
 {% endif %}
 
 
@@ -236,7 +236,7 @@ pm.max_requests = {{ pool.pm.max_requests | default(pm.max_requests)}}
 {% if pool.clear_env is defined %}
     clear_env = pool.clear_env
 {% else %}
-    clear_env = fpm_conf.clear_env
+    clear_env = clear_env
 {% endif %}
 
 ; Limits the extensions of the main script FPM will allow to parse.
@@ -247,7 +247,7 @@ pm.max_requests = {{ pool.pm.max_requests | default(pm.max_requests)}}
 {% if pool.security.limit_extensions is defined %}
     security.limit_extensions = pool.security.limit_extensions
 {% else %}
-    security.limit_extensions = fpm_conf.security.limit_extensions
+    security.limit_extensions = security.limit_extensions
 {% endif %}
 
 ; The access log file. Default value: not set
@@ -259,5 +259,5 @@ pm.max_requests = {{ pool.pm.max_requests | default(pm.max_requests)}}
 {% if pool.access.format is defined %}
     access.format = {{ pool.access.format }}
 {% else %}
-    access.format = {{ fpm_conf.access.format }}
+    access.format = {{ access.format }}
 {% endif %}
