--- a/templates/php-fpm.conf.j2
+++ b/templates/php-fpm.conf.j2
@@ -39,17 +39,17 @@ error_log = {{ error_log }}
 ; Log level
 ; Possible Values: alert, error, warning, notice, debug
 ; Default Value: notice
-log_level = {{ notice }}
+log_level = {{ log_level }}
 
 ; used to specify what type of program is logging the message.
 ; Default value: daemon.
-syslog.facility = {{ daemon }}
+syslog.facility = {{ syslog_facility }}
 
 ; Prepended to every message.
 ; If you have multiple FPM instances running on the same server
 ; you can change the default value which must suit common needs.
 ; Default value: php-fpm.
-syslog.ident = php-fpm
+syslog.ident = {{ syslog_ident }}
 
 ; If this number of child processes exit with SIGSEGV or SIGBUS within the time
 ; interval set by emergency_restart_interval then FPM will restart. A value
@@ -76,13 +76,13 @@ process_control_timeout = {{ process_control_timeout }}
 ; when using dynamic PM within a lot of pools. 
 ; Use it with caution. 
 ; Default value: 0.
-process.max = {{ process.max }}
+process.max = {{ process_max }}
 
 ; Specify the nice(2) priority to apply to the master process (only if set).
 ; The value can vary from -19 (highest priority) to 20 (lower priority).
 ; Default value: not set.
-{% if process.priority  is defined %}
-    process.priority = {{ process.priority }}    
+{% if process_priority  is defined %}
+    process.priority = {{ process_priority }}    
 {% endif %}
 
 ; Send FPM to background. Set to 'no' to keep FPM in foreground for debugging.
