--- a/templates/pool.conf.j2
+++ b/templates/pool.conf.j2
@@ -105,7 +105,7 @@ pm.max_children = {{ php_fpm_pool.pm_max_children | mandatory }}
 ; Used only when pm is set to dynamic.
 ; Also mandatory in this case.
 {% if php_fpm_pool.pm == "dynamic" %}
-    pm.min_spare_servers = {{ php_fpm_pool.min_spare_servers | mandatory}}
+    pm.min_spare_servers = {{ php_fpm_pool.pm_min_spare_servers | mandatory}}
 {% endif %}
 
 ; The desired maximum number of idle server processes.
