--- a/templates/pool.conf.j2
+++ b/templates/pool.conf.j2
@@ -5,73 +5,33 @@
 [{{php_fpm_pool.name}}]
 
 ; The address on which to accept FastCGI requests.
-; Valid syntaxes are: 'ip.add.re.ss:port', 'port', '/path/to/unix/socket'.
-; This option is mandatory for each pool.
 listen = {{ php_fpm_pool.listen }}
 
-; Set listen(2) backlog.
-; A value of '-1' means unlimited.
-; Default value: -1.
-{% if php_fpm_pool.listen_backlog is defined %}
-    listen.backlog = {{ php_fpm_pool.listen_backlog }}
-{% else %}
-    listen.backlog = {{ php_fpm_listen_backlog }}
-{% endif %}
+; Maximum length of request queue (default: -1)
+listen.backlog = {{ php_fpm_pool.listen_backlog | default(php_fpm_listen_backlog) }}
 
+listen.allowed_clients = {{ php_fpm_pool.listen_allowed_clients | default(php_fpm_listen_allowed_clients) | join(',') }}
 
-; List of IPv4 addresses of FastCGI clients which are allowed to connect.
-; Equivalent to the FCGI_WEB_SERVER_ADDRS environment variable
-; in the original PHP FastCGI (5.2.2+).
-; Makes sense only with a tcp listening socket.
-; Each address must be separated by a comma.
-; If this value is left blank, connections will be accepted from any ip address.
-; Default value: any. IPv6 addresses are allowed since PHP 5.5.20 and 5.6.4.
-
-
-{% if php_fpm_pool.listen_allowed_clients is defined %}
-    listen.allowed_clients = {{ php_fpm_pool.listen_allowed_clients }}
-{% else %}
-    listen.allowed_clients = {{ php_fpm_listen_allowed_clients }}
-{% endif %}
-
-
-; Set permissions for unix socket, if one is used.
-; In Linux, read/write permissions must be set in order to allow
-; connections from a web server.
-; Many BSD-derived systems allow connections regardless of permissions.
-; Default values: user and group are set as the running user, mode is set to 0660.
-
+; Set permissions for the unix socket, if one is used.
 {% if php_fpm_pool.listen_owner is defined%}
-    listen.owner = {{ php_fpm_pool.listen_owner }}
+listen.owner = {{ php_fpm_pool.listen_owner }}
 {% endif %}
-
-; See listen.owner
 {% if php_fpm_pool.listen_group is defined %}
-    listen.group = {{ php_fpm_pool.listen_group }}
+listen.group = {{ php_fpm_pool.listen_group }}
 {% endif %}
-
-; See listen.owner
 listen.mode = {{ php_fpm_pool.listen_mode | default(php_fpm_listen_mode) }}
-
-; When POSIX Access Control Lists are supported you can set them using this option.
-; When set, listen.owner and listen.group are ignored.
-; Value is a comma separated list of user names. Since PHP 5.6.5.
 {% if php_fpm_pool.listen_acl_users is defined %}
-    listen.acl_users = {{ php_fpm_pool.listen_acl_users }}
+listen.acl_users = {{ php_fpm_pool.listen_acl_users }}
 {% endif %}
-
-; See listen.acl_users.
-; Value is a comma separated list of group names. Since PHP 5.6.5.
 {% if php_fpm_pool.listen_acl_groups is defined %}
-    listen.acl_groups = {{ php_fpm_pool.listen_acl_groups }}
+listen.acl_groups = {{ php_fpm_pool.listen_acl_groups }}
 {% endif %}
 
-; Unix user of FPM processes. This option is mandatory.
+; Unix user of FPM processes
 user = {{ php_fpm_pool.user }}
-
-; Unix group of FPM processes. If not set, the default user's group is used.
 {% if php_fpm_pool.group is defined %}
-    group = {{ php_fpm_pool.group }}
+; Unix group of FPM processes
+group = {{ php_fpm_pool.group }}
 {% endif %}
 
 ; Choose how the process manager will control the number of child processes.
@@ -82,196 +42,131 @@ user = {{ php_fpm_pool.user }}
 pm = {{ php_fpm_pool.pm }}
 
 ; The number of child processes to be created when pm is set to static and the maximum number of child processes to be created when pm is set to dynamic.
-; This option is mandatory.
 ; This option sets the limit on the number of simultaneous requests that will be served.
-; Equivalent to the ApacheMaxClients directive with mpm_prefork and to the PHP_FCGI_CHILDREN environment variable in the original PHP FastCGI.
-{% if php_fpm_pool.pm == "ondemand"%}
+{% if php_fpm_pool.pm == "ondemand" %}
 {% if php_fpm_pool.pm_max_children is defined %}
-pm.max_children = {{php_fpm_pool.pm_max_children}}
+pm.max_children = {{ php_fpm_pool.pm_max_children }}
 {% endif %}
 {% else %}
 pm.max_children = {{ php_fpm_pool.pm_max_children }}
 {% endif %}
 
-; The number of child processes created on startup.
-; Used only when pm is set to dynamic.
-; Default Value: min_spare_servers + (max_spare_servers - min_spare_servers) / 2.
 {% if php_fpm_pool.pm.start_servers is defined %}
-    pm.start_servers = {{ php_fpm_pool.pm_start_servers }}
+; The number of child processes created on startup (used only when pm is set to dynamic).
+; Default Value: min_spare_servers + (max_spare_servers - min_spare_servers) / 2.
+pm.start_servers = {{ php_fpm_pool.pm_start_servers }}
 {% endif %}
-
-
-; The desired minimum number of idle server processes.
-; Used only when pm is set to dynamic.
-; Also mandatory in this case.
 {% if php_fpm_pool.pm == "dynamic" %}
-    pm.min_spare_servers = {{ php_fpm_pool.pm_min_spare_servers}}
+; The desired minimum number of idle server processes (used only when pm is set to dynamic).
+pm.min_spare_servers = {{ php_fpm_pool.pm_min_spare_servers}}
 {% endif %}
-
-; The desired maximum number of idle server processes.
-; Used only when pm is set to dynamic.
-; Also mandatory in this case.
 {% if php_fpm_pool.pm == "dynamic" %}
-    pm.max_spare_servers = {{ php_fpm_pool.pm_max_spare_servers}}
+; The desired maximum number of idle server processes (used only when pm is set to dynamic).
+pm.max_spare_servers = {{ php_fpm_pool.pm_max_spare_servers}}
 {% endif %}
 
-; The number of seconds after which an idle process will be killed.
-; Used only when pm is set to ondemand.
-; Available units: s(econds)(default), m(inutes), h(ours), or d(ays).
-; Default value: 10s.
-{% if php_fpm_pool.pm_process_idle_timeout is defined %}
-    pm.process_idle_timeout = {{ php_fpm_pool.pm_process_idle_timeout }}
-{% else %}
-    pm.process_idle_timeout = {{ php_fpm_pm_process_idle_timeout }}
-{% endif %}
-
+; The number of seconds after which an idle process will be killed (used only when pm is set to ondemand).
+pm.process_idle_timeout = {{ php_fpm_pool.pm_process_idle_timeout | default(php_fpm_pm_process_idle_timeout) }}
 
 ; The number of requests each child process should execute before respawning.
-; This can be useful to work around memory leaks in 3rd party libraries.
-; For endless request processing specify '0'.
-; Equivalent to PHP_FCGI_MAX_REQUESTS.
-; Default value: 0.
 pm.max_requests = {{ php_fpm_pool.pm_max_requests | default(php_fpm_pm_max_requests)}}
 
-; The URI to view the FPM status page.
-; If this value is not set, no URI will be recognized as a status page.
-; Default value: none.
-
 {% if php_fpm_pool.pm_status_path is defined %}
-    pm.status_path = {{ php_fpm_pool.pm_status_path }}
+; The URI to view the FPM status page.
+pm.status_path = {{ php_fpm_pool.pm_status_path }}
+
 {% endif %}
-
-; The ping URI to call the monitoring page of FPM.
-; If this value is not set, no URI will be recognized as a ping page.
-; This could be used to test from outside that FPM is alive and responding.
-; Please note that the value must start with a leading slash (/).
-
-
 {% if php_fpm_pool.ping_path is defined %}
-    ping.path = {{ php_fpm_pool.ping_path }}
-{% endif %}
+; The ping URI to call the monitoring page of FPM. This could be used to test from outside that FPM is alive and responding.
+ping.path = {{ php_fpm_pool.ping_path }}
 
-; This directive may be used to customize the response to a ping request.
-; The response is formatted as text/plain with a 200 response code.
-; Default value: pong
-{% if php_fpm_pool.ping_response is defined %}
-    ping.response = {{ php_fpm_pool.ping_response }}
-{% else %}
-    ping.response = {{ php_fpm_ping_response }}
 {% endif %}
+; The response to a ping request. The response is formatted as text/plain with a 200 response code.
+ping.response = {{ php_fpm_pool.ping_response | default(php_fpm_ping_response) }}
 
-; Specify the nice(2) priority to apply to the worker process (only if set).
-; The value can vary from -19 (highest priority) to 20 (lower priority).
-; Default value: not set.
 {% if php_fpm_pool.processes_priority is defined %}
-    process.priority = {{ php_fpm_pool.processes_priority }}
+process.priority = {{ php_fpm_pool.processes_priority }}
+
 {% endif %}
-
-
-; Specify prefix for path evaluation
 {% if php_fpm_pool.prefix is defined %}
-    prefix = {{ php_fpm_pool.prefix }}
-{% endif %}
+; Specify prefix for path evaluation
+prefix = {{ php_fpm_pool.prefix }}
 
+{% endif %}
 ; The timeout for serving a single request after which the worker process will be killed.
 ; This option should be used when the 'max_execution_time' ini option does not stop script execution for some reason.
-; A value of '0' means 'Off'.
-; Available units: s(econds)(default), m(inutes), h(ours), or d(ays).
-; Default value: 0.
-{% if php_fpm_pool.request_terminate_timeout is defined %}
-    request_terminate_timeout = {{ php_fpm_pool.request_terminate_timeout }}
-{% else %}
-    request_terminate_timeout = {{ php_fpm_request_terminate_timeout}}
-{% endif %}
-
+request_terminate_timeout = {{ php_fpm_pool.request_terminate_timeout | default(php_fpm_request_terminate_timeout) }}
 
 ; The timeout for serving a single request after which a PHP backtrace will be dumped to the 'slowlog' file.
-; A value of '0' means 'Off'.
-; Available units: s(econds)(default), m(inutes), h(ours), or d(ays).
-; Default value: 0.
-{% if php_fpm_pool.request_slowlog_timeout is defined %}
-    request_slowlog_timeout = {{ php_fpm_pool.request_slowlog_timeout }}
-{% else %}
-    request_slowlog_timeout = {{ php_fpm_request_slowlog_timeout}}
-{% endif %}
+request_slowlog_timeout = {{ php_fpm_pool.request_slowlog_timeout | default(php_fpm_request_slowlog_timeout) }}
 
 ; The log file for slow requests.
-; Default value: #INSTALL_PREFIX#/log/php-fpm.log.slow.
 slowlog = {{ php_fpm_pool.slowlog | default(php_fpm_slowlog) }}
 
-; Set open file descriptor rlimit for child processes in this pool.
-; Default value: system defined value.
 {% if php_fpm_pool.rlimit_files is defined %}
-    rlimit_files = {{ php_fpm_pool.rlimit_files }}
-{% endif %}
+; Open file descriptor rlimit for child processes in this pool.
+rlimit_files = {{ php_fpm_pool.rlimit_files }}
 
-; limit_core int
-; Set max core size rlimit for child processes in this pool.
-; Possible Values: 'unlimited' or an integer greater or equal to 0.
-; Default value: system defined value.
+{% endif %}
 {% if php_fpm_pool.rlimit_core is defined %}
-    rlimit_core = {{ php_fpm_pool.rlimit_core }}
-{% endif %}
+; Max core size rlimit for child processes in this pool.
+rlimit_core = {{ php_fpm_pool.rlimit_core }}
 
-; Chroot to this directory at the start.
-; This value must be defined as an absolute path.
-; When this value is not set, chroot is not used.
+{% endif %}
 {% if php_fpm_pool.chroot is defined %}
-    chroot = {{ php_fpm_pool.chroot }}
-{% endif %}
+; Chroot to this directory at the start.
+chroot = {{ php_fpm_pool.chroot }}
 
-; Chdir to this directory at the start.
-; This value must be an absolute path.
-; Default value: current directory or / when chroot.
+{% endif %}
 {% if php_fpm_pool.chdir is defined %}
-    chdir = {{ php_fpm_pool.chdir }}
-{% endif %}
+; Chdir to this directory at the start.
+chdir = {{ php_fpm_pool.chdir }}
 
+{% endif %}
 ; Redirect worker stdout and stderr into main error log.
-; If not set, stdout and stderr will be redirected to /dev/null according to FastCGI specs.
-; Default value: no.
-{% if php_fpm_pool.catch_workers_output is defined %}
-    catch_workers_output = {{ php_fpm_pool.catch_workers_output }}
-{% else %}
-    catch_workers_output = {{ php_fpm_catch_workers_output }}
-{% endif %}
-
+catch_workers_output = {% if php_fpm_pool.catch_workers_output | default(php_fpm_catch_workers_output) %}yes{% else %}no{% endif %}
 
 ; Clear environment in FPM workers.
-; Prevents arbitrary environment variables from reaching FPM worker processes
-; by clearing the environment in workers before env vars specified in this pool configuration are added.
-; Since PHP 5.4.27, 5.5.11, and 5.6.0. Default value: Yes.
-{% if php_fpm_pool.clear_env is defined %}
-    clear_env = {{ php_fpm_pool.clear_env }}
-{% else %}
-    clear_env = {{ php_fpm_clear_env }}
-{% endif %}
+clear_env = {% if php_fpm_pool.clear_env | default(php_fpm_clear_env) %}yes{% else %}no{% endif %}
 
 ; Limits the extensions of the main script FPM will allow to parse.
-; This can prevent configuration mistakes on the web server side.
-; You should only limit FPM to .php extensions to prevent malicious
-; users to use other extensions to execute php code.
-; Default value: .php .phar
-
-{% if php_fpm_pool.security_limit_extensions is defined %}
-    security.limit_extensions = {{ php_fpm_pool.security_limit_extensions }}
-{% else %}
-    security.limit_extensions = {{ php_fpm_security_limit_extensions }}
-{% endif %}
-
-; The access log file. Default value: not set
+security.limit_extensions = {{ php_fpm_pool.security_limit_extensions | default(php_fpm_security_limit_extensions) | join(' ') }}
 {% if php_fpm_pool.access_log is defined %}
-    access.log = {{ php_fpm_pool.access_log }}
-{% endif %}
-
-; The access log format. Default value: "%R - %u %t \"%m %r\" %s"
-{% if php_fpm_pool.access_format is defined %}
-    access.format = {{ php_fpm_pool.access_format }}
-{% else %}
-    access.format = {{ php_fpm_access_format }}
+access.log = {{ php_fpm_pool.access_log }}
+access.format = {{ php_fpm_pool.access_format | default(php_fpm_access_format) }}
 {% endif %}
 {% if php_fpm_pool.envs is defined %}
+
+; Environment variables
 {% for key in php_fpm_pool.envs.keys() %}
-    env[{{ key }}] = {{  php_fpm_pool.envs[key] }}
+env[{{ key }}] = {{  php_fpm_pool.envs[key] }}
+{% endfor %}
+{% endif %}
+{% if php_fpm_pool.php_flags is defined %}
+
+; PHP flags
+{% for key in php_fpm_pool.php_flags.keys() %}
+php_flag[{{ key }}] = {% if php_fpm_pool.php_flags[key] %}on{% else %}off{% endif %}
+{% endfor %}
+{% endif %}
+{% if php_fpm_pool.php_admin_flags is defined %}
+
+; PHP admin flags (not overridable)
+{% for key in php_fpm_pool.php_admin_flags.keys() %}
+php_admin_flag[{{ key }}] = {% if php_fpm_pool.php_admin_flags[key] %}on{% else %}off{% endif %}
+{% endfor %}
+{% endif %}
+{% if php_fpm_pool.php_values is defined %}
+
+; PHP values
+{% for key in php_fpm_pool.php_values.keys() %}
+php_value[{{ key }}] = {{ php_fpm_pool.php_values[key] }}
+{% endfor %}
+{% endif %}
+{% if php_fpm_pool.php_admin_values is defined %}
+
+; PHP admin values (not overridable)
+{% for key in php_fpm_pool.php_admin_values.keys() %}
+php_admin_value[{{ key }}] = {{ php_fpm_pool.php_admin_values[key] }}
 {% endfor %}
 {% endif %}
