--- a/templates/pool.conf.j2
+++ b/templates/pool.conf.j2
@@ -51,7 +51,7 @@ pm.max_children = {{ php_fpm_pool.pm_max_children }}
 pm.max_children = {{ php_fpm_pool.pm_max_children }}
 {% endif %}
 
-{% if php_fpm_pool.pm.start_servers is defined %}
+{% if php_fpm_pool.pm_start_servers is defined %}
 ; The number of child processes created on startup (used only when pm is set to dynamic).
 ; Default Value: min_spare_servers + (max_spare_servers - min_spare_servers) / 2.
 pm.start_servers = {{ php_fpm_pool.pm_start_servers }}
